plugins {
    id "architectury-plugin" version "3.5.169"
    id "dev.architectury.loom" version "1.17.487" apply false
}

architectury {
    minecraft = project.minecraft_version
}

allprojects {
    group = project.mod_group_id
    version = project.mod_version
}

subprojects {
    apply plugin: "dev.architectury.loom"
    apply plugin: "architectury-plugin"

    base {
        archivesName = "${project.mod_id}-${project.name}-${project.minecraft_version}"
    }

    repositories {
        mavenLocal()
        maven { url "https://maven.neoforged.net/releases/" }
        maven { url "https://maven.fabricmc.net/" }
        maven { url "https://maven.blamejared.com/" }
        maven { url "https://api.modrinth.com/maven" }
        maven {
            name = "ParchmentMC"
            url = "https://maven.parchmentmc.org"
        }
        maven {
            name = "Gegy"
            url = "https://maven.gegy.dev"
        }
    }

    dependencies {
        minecraft "com.mojang:minecraft:${project.minecraft_version}"
        mappings loom.layered {
            officialMojangMappings()
            parchment("org.parchmentmc.data:parchment-${project.parchment_minecraft_version}:${project.parchment_mappings_version}@zip")
        }
    }

    java {
        withSourcesJar()
        toolchain.languageVersion = JavaLanguageVersion.of(21)
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = "UTF-8"
        options.release = 21
    }
}
